objects/ASI_CRM_ContractTarget__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Advertising_Spot_Free_Bottles__c</fullName>
        <label>Advertising Spot (Free Bottles)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Advertising_Spot__c</fullName>
        <label>Advertising Spot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Back_Rebates_Issued_Percent__c</fullName>
        <formula>IF(ASI_CRM_Bottle_Incentive_Total__c = 0, 0, ASI_CRM_Back_Rebates_Issued_Total__c / ASI_CRM_Bottle_Incentive_Total__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Back Rebates - Issued %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Back_Rebates_Issued_Total__c</fullName>
        <label>Back Rebates - Issued Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Blind_Bonus_Amount__c</fullName>
        <label>Blind Bonus Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Block_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Block Delete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bottle_Incentive_Total__c</fullName>
        <formula>ASI_CRM_Bottle_Incentive__c * ASI_CRM_SG_Btls_Per_Case__c * ASI_CRM_TargetCase__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bottle Incentive - Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bottle_Incentive__c</fullName>
        <label>Bottle Incentive</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract_Start_Date__c</fullName>
        <formula>ASI_CRM_Contract__r.ASI_TH_CRM_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>Contract Target</relationshipLabel>
        <relationshipName>Contract_Target</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Duty_Per_Bottle__c</fullName>
        <label>Duty Per Bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Entitle_Back_Rebates_Original__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Assigned when user Start Simulate on an approved Contract</description>
        <label>Entitle Back Rebates Original</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Entitle_Back_Rebates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entitle Back Rebates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOB_Per_Bottle__c</fullName>
        <label>FOB Per Bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Handling_Cost_Per_Bottle__c</fullName>
        <label>Handling Cost Per Bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_IGC__c</fullName>
        <label>IGC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Price_Per_Bottle__c</fullName>
        <label>Incentive Price Per Bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Inflation_Rate__c</fullName>
        <formula>ASI_CRM_Contract__r.ASI_CRM_Inflation_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inflation Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Maximum_Back_Rebate__c</fullName>
        <formula>ASI_CRM_SG_Selling_Price_Btl_WS_On_Trade__c - ASI_CRM_Incentive_Price_Per_Bottle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum Back Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MinSPCase__c</fullName>
        <label>Min SP (Case)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Minimum_Sales_Cases__c</fullName>
        <label>Minimum Sales (Cases)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Net_Net_Price_After_A_P__c</fullName>
        <formula>ASI_CRM_SG_Net_Net_Price__c -  ASI_CRM_SG_Ad_hoc_Promotions__c / ( ASI_CRM_PackagingSize__c * ASI_CRM_TargetCase__c ) - ASI_CRM_SG_Anniversary__c * ASI_CRM_SG_IGC_Cost_Per_case__c / ( ASI_CRM_PackagingSize__c * ASI_CRM_TargetCase__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Net Price After A&amp;P</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PackFactor__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_HK_CRM_Pack_Factor__c</formula>
        <label>Pack Factor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PackagingSize__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_HK_CRM_Packaging_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packaging Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product__c</fullName>
        <formula>ASI_CRM_SKU__r.Name</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Prompt_Payment_Rate__c</fullName>
        <formula>/* before SG P3
ASI_CRM_SKU__r.ASI_MFM_Sub_brand__r.ASI_MFM_Brand__r.ASI_CRM_Prompt_Payment_Rate__c
*/
ASI_CRM_SKU__r.ASI_MFM_Sub_brand__r.ASI_CRM_Prompt_Payment_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prompt Payment Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_RTM_Price_Per_Bottle_PRS_WS__c</fullName>
        <label>RTM Price Per Bottle (PRS - WS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_RTM_Price_Per_Bottle_WS_OT__c</fullName>
        <label>RTM Price Per Bottle (WS - OT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Ad_hoc_Others_Total__c</fullName>
        <label>Ad-hoc Others Total</label>
        <summarizedField>ASI_CRM_SG_AdhocOther__c.ASI_CRM_SG_Amount__c</summarizedField>
        <summaryForeignKey>ASI_CRM_SG_AdhocOther__c.ASI_CRM_SG_Contract_Target__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Ad_hoc_Promotions__c</fullName>
        <label>A&amp;P Fund</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Anniversary_Free_Bottles__c</fullName>
        <label>A&amp;P Fund (Cases)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Anniversary__c</fullName>
        <label>Anniversary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Btls_Per_Case__c</fullName>
        <label>Btls Per Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Cash_Sponsorship_Total__c</fullName>
        <formula>ASI_CRM_SG_Good_in_Kinds__c +  ASI_CRM_SG_Cash__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash Sponsorship - Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Cash_Sponsorship__c</fullName>
        <formula>- ASI_CRM_SG_Cash_Sponsorship_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash Sponsorship</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Cash__c</fullName>
        <label>Cash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Compensation_for_WS_Price_Dif__c</fullName>
        <formula>IF(OR( ASI_CRM_SG_Consumer_Price_Offer__c == 0, ASI_CRM_SG_Consumer_Price_Offer__c &gt;  ASI_CRM_SG_Selling_Price_Btl_PRS_WS__c ),
0,
 ASI_CRM_TargetCase__c * ASI_CRM_SG_Btls_Per_Case__c *  (ASI_CRM_SG_Selling_Price_Btl_PRS_WS__c - ASI_CRM_SG_Consumer_Price_Offer__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compensation for WS - Price Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Consumer_Price_Offer__c</fullName>
        <label>Consumer Price Offer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Cont_Margin_Price_Overwrite__c</fullName>
        <formula>-  ASI_CRM_SG_Contract_Margin_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Margin / Price Overwrite</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Cont_Sponsor_Target_Incentive__c</fullName>
        <label>Contract Sponsorship/Target Incentive</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Contract_Margin_Total__c</fullName>
        <formula>ASI_CRM_SG_Compensation_for_WS_Price_Dif__c +  ASI_CRM_SG_Wholesaler_Margin_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Margin - Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Contract_Margin_per_9Lc__c</fullName>
        <formula>IF( ASI_CRM_SG_Consumer_Price_Offer__c == 0,
0, 
((ASI_CRM_SG_Selling_Price_Btl_PRS_WS__c - ASI_CRM_SG_Consumer_Price_Offer__c) +  ASI_CRM_SG_Wholesaler_Margin__c ) * 900 /  ASI_CRM_SG_Size_cl__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Margin - per 9Lc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Cost_of_Sales__c</fullName>
        <formula>/*
 * formula in SG P1
-  ASI_CRM_SG_Total_Volume_9L_Cases__c *  ASI_CRM_SG_IGC_Cost_Per_9Lc__c
 */
- ((ASI_CRM_FOB_Per_Bottle__c + ASI_CRM_Handling_Cost_Per_Bottle__c) * ( 1 + ASI_CRM_Contract__r.ASI_CRM_Inflation_Rate__c) + ASI_CRM_Duty_Per_Bottle__c ) * (ASI_CRM_TargetCase__c + ASI_CRM_SG_Total_Free_Goods_Cases__c) * ASI_CRM_SG_Btls_Per_Case__c + ASI_CRM_SG_Distribution_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost of Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Cost_of_Sales_percent__c</fullName>
        <formula>IF(ASI_CRM_SG_Net_Sales__c = 0, 0, (- ASI_CRM_SG_Cost_of_Sales__c )/  ASI_CRM_SG_Net_Sales__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost of Sales %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Distribution_Cost__c</fullName>
        <formula>/*
 * formula in SG P1
ASI_CRM_SG_Gross_Sales__c * (-0.015)
 */
- ASI_CRM_SG_Gross_Sales__c *  ASI_CRM_Contract__r.ASI_CRM_Distribution_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Events_Free_Bottles__c</fullName>
        <label>Events (Free Bottles)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Events__c</fullName>
        <label>Events</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_FOC_Calculation__c</fullName>
        <label>FOC Calculation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>By Sub-Brand</fullName>
                </value>
                <value>
                    <fullName>By Wine Category</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_FOC_Ratio__c</fullName>
        <formula>IF(ASI_CRM_SG_Target_Sales_Cases_FOC__c &lt;&gt; 0, ASI_CRM_SG_Total_Free_Goods_Cases__c /  ASI_CRM_SG_Target_Sales_Cases_FOC__c * 12, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOC Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Free_Goods__c</fullName>
        <formula>-  ASI_CRM_SG_Total_Free_Goods_Cases__c *  ASI_CRM_SG_Btls_Per_Case__c * ASI_CRM_SG_Selling_Price_Btl_PRS_WS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Free Goods ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Good_in_Kinds__c</fullName>
        <label>Good-in-Kinds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Gross_Margin__c</fullName>
        <formula>/*
 * Formula in SG P1
ASI_CRM_SG_Net_Sales__c +  ASI_CRM_SG_Cost_of_Sales__c +  ASI_CRM_SG_Distribution_Cost__c
 */
/* Now move distribution cost into Cost of Sales */
ASI_CRM_SG_Net_Sales__c +  ASI_CRM_SG_Cost_of_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Gross_Margin_perc__c</fullName>
        <formula>/* 
 * Formula in SG P1, in P2 we move distribution cost into Cost of Sales 
IF(ASI_CRM_SG_Net_Sales__c=0,0,((ASI_CRM_SG_Cost_of_Sales__c + ASI_CRM_SG_Distribution_Cost__c) / ASI_CRM_SG_Net_Sales__c) + 1)
 */
IF(ASI_CRM_SG_Net_Sales__c=0,0,(ASI_CRM_SG_Cost_of_Sales__c / ASI_CRM_SG_Net_Sales__c) + 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Gross_Sales__c</fullName>
        <formula>/*
 * Formula in SG P1
ASI_CRM_SG_Total_Volume_9L_Cases__c *  ASI_CRM_SG_Selling_Price_Per_9Lc_PRS_WS__c
 */
/* To reduce compile size in SG P2 */
(ASI_CRM_SG_Total_Free_Goods_Cases__c+ASI_CRM_TargetCase__c) * ASI_CRM_SG_Btls_Per_Case__c * ASI_CRM_SG_Selling_Price_Btl_PRS_WS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_IGC_Cost_Per_9Lc__c</fullName>
        <label>IGC Cost Per 9Lc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_IGC_Cost_Per_case__c</fullName>
        <label>IGC Cost Per case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Management_Incentives__c</fullName>
        <label>Management Incentives</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Net_Net_Price__c</fullName>
        <formula>ASI_CRM_SG_Net_Price__c - ASI_CRM_SG_Cash__c /  ( ASI_CRM_PackagingSize__c * ASI_CRM_TargetCase__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Net_Price__c</fullName>
        <formula>ASI_CRM_SG_Selling_Price_Btl_WS_On_Trade__c -  ASI_CRM_SG_Wholesaler_Margin__c - ASI_CRM_Bottle_Incentive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Net_Sales__c</fullName>
        <formula>ASI_CRM_SG_Gross_Sales__c +  ASI_CRM_SG_Total_Allowances_Discounts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Others__c</fullName>
        <label>Others</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Product_Branding_Display__c</fullName>
        <label>Product Branding Display</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_ROI__c</fullName>
        <formula>/*
 * Formula in SG P1, in P2 we move distribution cost into Cost of Sales
IF(ASI_CRM_SG_Net_Sales__c = 0, 0, ((ASI_CRM_SG_Cost_of_Sales__c + ASI_CRM_SG_Distribution_Cost__c + ASI_CRM_SG_Trade_A_P_Expenses__c) /  ASI_CRM_SG_Net_Sales__c) +1)
 */
IF(ASI_CRM_SG_Net_Sales__c = 0, 0, ((ASI_CRM_SG_Cost_of_Sales__c + ASI_CRM_SG_Trade_A_P_Expenses__c) /  ASI_CRM_SG_Net_Sales__c) +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROI</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Return_on_Investment__c</fullName>
        <formula>/*
 * Formula in SG P1
ASI_CRM_SG_Gross_Margin__c +  ASI_CRM_SG_Trade_A_P_Expenses__c
 */
ASI_CRM_SG_Gross_Margin__c -  ASI_CRM_SG_Trade_A_P_Total_PRS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return on Investment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Sales_Incentive__c</fullName>
        <label>Sales Incentive</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Selling_Price_Btl_PRS_WS__c</fullName>
        <label>Selling Price Per Bottle (PRS - WS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Selling_Price_Btl_WS_On_Trade__c</fullName>
        <label>Selling Price Per Bottle (WS - On Trade)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Selling_Price_Per_9Lc_PRS_WS__c</fullName>
        <formula>ASI_CRM_SG_Selling_Price_Btl_PRS_WS__c * (900 / ASI_CRM_SG_Size_cl__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selling Price Per 9Lc (PRS - Wholesaler)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Signages_Ad_Spot_Free_Btl__c</fullName>
        <label>Signages/Advertising Spot (Free Bottles)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Signages_Advertising_Spot__c</fullName>
        <label>Signages / Advertising Spot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Size_cl__c</fullName>
        <label>Size (cl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Target_FOC_Vol_9L_Prorated__c</fullName>
        <formula>ASI_CRM_SG_Total_Free_Goods_9L_Cases__c * ASI_CRM_Contract__r.ASI_CRM_SG_Pro_rated_till_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target FOC Vol(9L cases) - Prorated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Target_Sales_9L_Case_Prorated__c</fullName>
        <formula>ASI_CRM_SG_Target_Sales_9L_Cases__c *   ASI_CRM_Contract__r.ASI_CRM_SG_Pro_rated_till_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Sales (9L Case) Pro rated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Target_Sales_9L_Cases_FOC__c</fullName>
        <formula>ASI_CRM_SG_Target_Sales_Cases_FOC__c *  ASI_CRM_SG_Size_cl__c * ASI_CRM_SG_Btls_Per_Case__c / 900</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Sales (9L Cases) FOC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Target_Sales_9L_Cases__c</fullName>
        <formula>ASI_CRM_TargetCase__c * ASI_CRM_SG_Size_cl__c *  ASI_CRM_SG_Btls_Per_Case__c / 900</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Sales (9L Cases)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Target_Sales_Cases_FOC__c</fullName>
        <formula>if( OR( ISPICKVAL(ASI_CRM_SG_FOC_Calculation__c , &apos;By Sub-Brand&apos;), ISPICKVAL(ASI_CRM_SG_FOC_Calculation__c , &apos;By Category&apos;)), ASI_CRM_SG_Target_Sales_Sub_B_Wine_Cat__c , ASI_CRM_TargetCase__c  

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Sales (Cases) FOC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Target_Sales_Sub_B_Wine_Cat__c</fullName>
        <label>Target Sales (Cases) Sub-Brand/Wine Cat</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Target_Total_Vol_9L_Prorated__c</fullName>
        <formula>ASI_CRM_SG_Total_Volume_9L_Cases__c *  ASI_CRM_Contract__r.ASI_CRM_SG_Pro_rated_till_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Total Volume (9L cases) Pro rated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_TillDateTotalVol9LContStart__c</fullName>
        <formula>ASI_CRM_SG_Till_Date_Sales_9L_Cont_Start__c  +  ASI_CRM_SG_Till_Date_FOC_9L_Cont_Sta__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Till Date Total Vol(9L cases Cont Start)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Till_Date_FOC_9L_Cont_Sta__c</fullName>
        <label>Till Date FOC(9L cases, From ContStart)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Till_Date_FOC_Ratio__c</fullName>
        <formula>ASI_CRM_SG_Till_Date_FOC_9L_Cont_Sta__c /  ASI_CRM_SG_Till_Date_Sales_9L_Cont_Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Till Date FOC Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Till_Date_Sales_9L_Cont_Start__c</fullName>
        <label>Till Date Sales (9L Case, Cont Start)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_TotalCashGoodsinkindSponsor__c</fullName>
        <formula>ASI_CRM_SG_TradeAPTotalFOCWSOntradeSP__c +  ASI_CRM_SG_Cash_Sponsorship_Total__c +  ASI_CRM_SG_Total_Free_Goods_Cases__c *  ASI_CRM_SG_Selling_Price_Btl_WS_On_Trade__c *  ASI_CRM_SG_Btls_Per_Case__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cash/Goods-in-kind Sponsorship</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_TotalInvestmentValueforPRS__c</fullName>
        <formula>/*
 * Formula in SG P1
( ASI_CRM_SG_Events__c + ASI_CRM_SG_Signages_Advertising_Spot__c +  ASI_CRM_SG_Trade_Incentive_Trips__c + ASI_CRM_SG_Product_Branding_Display__c +  ASI_CRM_SG_Ad_hoc_Promotions__c ) +  ASI_CRM_SG_Contract_Margin_Total__c +  ASI_CRM_SG_Cash_Sponsorship_Total__c +(( ASI_CRM_SG_Total_Free_Goods_Cases__c + ASI_CRM_SG_Events_Free_Bottles__c + ASI_CRM_SG_Signages_Ad_Spot_Free_Btl__c + ASI_CRM_SG_Anniversary_Free_Bottles__c )* ASI_CRM_SG_IGC_Cost_Per_case__c )
 */
( ASI_CRM_SG_Events__c + ASI_CRM_SG_Signages_Advertising_Spot__c +  ASI_CRM_SG_Trade_Incentive_Trips__c + ASI_CRM_SG_Product_Branding_Display__c +  ASI_CRM_SG_Ad_hoc_Promotions__c + ASI_CRM_Advertising_Spot__c) +  ASI_CRM_SG_Contract_Margin_Total__c + (ASI_CRM_Bottle_Incentive__c * ASI_CRM_SG_Btls_Per_Case__c * ASI_CRM_TargetCase__c) +  ASI_CRM_SG_Cash_Sponsorship_Total__c +(( ASI_CRM_SG_Total_Free_Goods_Cases__c + ASI_CRM_SG_Events_Free_Bottles__c + ASI_CRM_SG_Signages_Ad_Spot_Free_Btl__c + ASI_CRM_SG_Anniversary_Free_Bottles__c + ASI_CRM_Advertising_Spot_Free_Bottles__c)* ASI_CRM_SG_IGC_Cost_Per_case__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Investment Value for PRS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Total_Allowances_Discounts__c</fullName>
        <formula>/* 
 * this is the formula in SG P1
ASI_CRM_SG_Free_Goods__c + ASI_CRM_SG_Cont_Margin_Price_Overwrite__c +  ASI_CRM_SG_Cash_Sponsorship__c
 *
 */
ASI_CRM_SG_Free_Goods__c - ASI_CRM_SG_Wholesaler_Margin_Total__c - ASI_CRM_SG_Compensation_for_WS_Price_Dif__c - ASI_CRM_SG_Good_in_Kinds__c - ASI_CRM_SG_Cash__c - (ASI_CRM_Bottle_Incentive__c * ASI_CRM_SG_Btls_Per_Case__c * ASI_CRM_TargetCase__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Allowances &amp; Discounts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Total_Free_Goods_9L_Cases__c</fullName>
        <formula>ASI_CRM_SG_Total_Free_Goods_Cases__c *  ASI_CRM_SG_Size_cl__c *  ASI_CRM_SG_Btls_Per_Case__c / 900</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Free Goods (9L Cases)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Total_Free_Goods_Cases__c</fullName>
        <formula>ASI_CRM_SG_Sales_Incentive__c *  ASI_CRM_SG_Target_Sales_Cases_FOC__c /  ASI_CRM_SG_Btls_Per_Case__c +  ASI_CRM_Total_Management_Incentives__c +  ASI_CRM_SG_Others__c +  ASI_CRM_SG_Cont_Sponsor_Target_Incentive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Free Goods (Cases)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Total_Volume_9L_Cases__c</fullName>
        <formula>(ASI_CRM_SG_Size_cl__c * ASI_CRM_SG_Btls_Per_Case__c )*((ASI_CRM_SG_Total_Free_Goods_Cases__c+ASI_CRM_TargetCase__c)/900)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Volume (9L Cases)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Total_Volume_Cases__c</fullName>
        <formula>ASI_CRM_SG_Total_Free_Goods_Cases__c +  ASI_CRM_TargetCase__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Volume (Cases)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_TradeAPTotalFOCWSOntradeSP__c</fullName>
        <formula>/*
 * Formula in P1
ASI_CRM_SG_Events__c +  ASI_CRM_SG_Signages_Advertising_Spot__c +  ASI_CRM_SG_Trade_Incentive_Trips__c +  ASI_CRM_SG_Product_Branding_Display__c +  ASI_CRM_SG_Ad_hoc_Promotions__c +  ASI_CRM_SG_Ad_hoc_Others_Total__c + ( ASI_CRM_SG_Events_Free_Bottles__c +  ASI_CRM_SG_Signages_Ad_Spot_Free_Btl__c +  ASI_CRM_SG_Anniversary_Free_Bottles__c ) *  ASI_CRM_SG_Btls_Per_Case__c *  ASI_CRM_SG_Selling_Price_Btl_WS_On_Trade__c
 */
ASI_CRM_SG_Events__c +  ASI_CRM_SG_Signages_Advertising_Spot__c +  ASI_CRM_SG_Trade_Incentive_Trips__c +  ASI_CRM_SG_Product_Branding_Display__c +  ASI_CRM_SG_Ad_hoc_Promotions__c +  ASI_CRM_SG_Ad_hoc_Others_Total__c + ( ASI_CRM_SG_Events_Free_Bottles__c +  ASI_CRM_SG_Signages_Ad_Spot_Free_Btl__c +  ASI_CRM_SG_Anniversary_Free_Bottles__c + ASI_CRM_Advertising_Spot_Free_Bottles__c ) *  ASI_CRM_SG_Btls_Per_Case__c *  ASI_CRM_SG_Selling_Price_Btl_WS_On_Trade__c + ASI_CRM_Advertising_Spot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trade A&amp;P Total - (FOC: WS -Ontrade SP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Trade_AP_Expense_percentage__c</fullName>
        <formula>/*
 * Formula in SG P1
IF(ASI_CRM_SG_Net_Sales__c = 0, 0, (- ASI_CRM_SG_Trade_A_P_Expenses__c ) /  ASI_CRM_SG_Net_Sales__c)
 */
/* Reduce compile size in SG P2 */
IF(ASI_CRM_SG_Net_Sales__c = 0, 0, ( ASI_CRM_SG_Trade_A_P_Total_PRS__c ) /  ASI_CRM_SG_Net_Sales__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trade A&amp;P Expense %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Trade_A_P_Expenses__c</fullName>
        <formula>-  ASI_CRM_SG_Trade_A_P_Total_PRS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trade A&amp;P Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Trade_A_P_Total_PRS__c</fullName>
        <formula>/*
 * Formula in SG P1
ASI_CRM_SG_Events__c +  ASI_CRM_SG_Signages_Advertising_Spot__c +  ASI_CRM_SG_Trade_Incentive_Trips__c +  ASI_CRM_SG_Product_Branding_Display__c +  ASI_CRM_SG_Ad_hoc_Promotions__c +  ASI_CRM_SG_Ad_hoc_Others_Total__c + ( ASI_CRM_SG_Events_Free_Bottles__c +  ASI_CRM_SG_Signages_Ad_Spot_Free_Btl__c +  ASI_CRM_SG_Anniversary_Free_Bottles__c ) *   ASI_CRM_SG_IGC_Cost_Per_case__c
 */
ASI_CRM_SG_Events__c +  ASI_CRM_SG_Signages_Advertising_Spot__c +  ASI_CRM_SG_Trade_Incentive_Trips__c +  ASI_CRM_SG_Product_Branding_Display__c +  ASI_CRM_SG_Ad_hoc_Promotions__c +  ASI_CRM_SG_Ad_hoc_Others_Total__c + ( ASI_CRM_SG_Events_Free_Bottles__c +  ASI_CRM_SG_Signages_Ad_Spot_Free_Btl__c +  ASI_CRM_SG_Anniversary_Free_Bottles__c + ASI_CRM_Advertising_Spot_Free_Bottles__c) *   ASI_CRM_SG_IGC_Cost_Per_case__c + ASI_CRM_Advertising_Spot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trade A&amp;P - Total -PRS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Trade_Incentive_Trips__c</fullName>
        <label>Trade Incentive Trips</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>